chore(demo): Fix documentation Name & Description, Type columns overlapping. (#10032)

--- a/projects/addon-doc/components/documentation/documentation.style.less
+++ b/projects/addon-doc/components/documentation/documentation.style.less
@@ -159,3 +159,7 @@
         max-inline-size: 22.5rem;
     }
 }
+
+.t-no-overflow {
+    overflow: hidden !important;
+}
